

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "utils",
    "day_1",
    "day_2",
    "day_3",
    "day_4",
    "day_5",
    "day_6",
    "day_7",
    "day_8",
    "day_9",
    "day_10",
    "day_11",
    "day_12",
    "day_13",
    "day_14",
    "day_15",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["David Skyberg <daviskyberg@gmail.com>"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.75"
indexmap = "2.1.0"
itertools = "0.12.0"
lazy_static = "1.4.0"
num = "0.4.1"
regex = "1.10.2"
utils = { path = "utils" }
