[package]
name = "day_15"
version = "0.1.0"
edition = "2021"
authors = ["David Skyberg <daviskyberg@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
indexmap = "2.1.0"
lazy_static = "1.4.0"
regex = "1.10.2"
utils = { path = "../utils" }
