[package]
name = "day_16"
version = "0.1.0"
edition = "2021"
authors = ["David Skyberg <daviskyberg@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
utils = { path = "../utils" }
